# libreads

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: test.yml
examples/: governing_the_commons.rs  the_origin_of_species.rs
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.html
frontend/src/routes/: index.svelte
frontend/static/: global.css
src/: convert.rs  download_registry.rs  extension.rs  find_isbn.rs  goodreads.rs  lib.rs  libgen.rs  library.rs  library_dot_lol.rs  libreads.rs  main.rs  web.rs
tests/testdata/: dummy_ebook.epub  dummy_ebook.mobi  goodreads_1984_book_page.html  goodreads_origin_of_species_curl_page.html  library.lol_book_page.html
