[package]
name = "libreads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
async-trait = "0.1"
mockall = "0.11"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }

[dev-dependencies]
httpmock = "0.6"
